# shadow

./: .bumpversion.cfg  .clang-format  .dockerignore  .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README  README.md  build-info.h.in  codecov.yml  config.h.in  rust-toolchain.toml  setup  setup.py  setup.sh  shadow.doxyfile  shadowrunner.py  static_symbol_converter.py
resource/: CMakeLists.txt  authority.torrc  client.tgen.graphml.xml  client.torrc  consensus.txt  echo.xml  example.hosts.xml  example.topology.xml  example_hosts_with_browser.xml  exit.torrc  filetransfer.downloads  filetransfer.xml  jumbo.txz  large.txz  medium.txz  pingpong.xml  relay.torrc  scallion.xml  server.tgen.graphml.xml  shadow.config.xml  small.txz  tgen.bulkclient.graphml.xml  tgen.client.graphml.xml  tgen.server.graphml.xml  tgen.webclient.graphml.xml  tiny.txz  topology.graphml.xml.xz  topology.plab.graphml.xml.xz  topology.simple.graphml.xml.xz  topology.xml.xz
resource/browser-example/: index.htm
resource/examples/: shadow.config.xml  test.graphml.xml.xz  tgen.bulkclient.graphml.xml  tgen.client.graphml.xml  tgen.server.graphml.xml  tgen.webclient.graphml.xml
resource/filetransfer-example/: example.hosts.xml
resource/scallion-example/: authority.torrc  client.torrc  exit.torrc  relay.torrc  scallion.xml
resource/scallion-hosts/: large-m2.4xlarge.tar.xz  medium-m2.2xlarge.tar.xz  medium.txz  minimal.tar.xz  small-m1.xlarge.tar.xz  small.txz  tiny-m1.large.tar.xz
resource/scallion-topologies/: jumbo.txz
resource/tgen/: make_test_graph.py  shadow.config.xml  tgen.client.graphml.xml  tgen.test.graphml.xml
scallion/src/: CMakeLists.txt  scallion  scallion-plugin.c  scallion-registration.c  scallion.h  tor_externs.h
shadowtools/: CMakeLists.txt  README.md  pyproject.toml
shadowtools/tests/: test_shadow_exec.py
src/: CMakeLists.txt  Cargo.toml  lib.rs  main.c  rc.rs  refcell.rs  scallion  scallion-plugin.c  scallion-plugin.h  scallion-preload.c  scallion-registration.c  scallion-tor.c  scallion.c  scallion.dsim  scallion.h  scallion_registration.c  shadow  shadow.h  tor_externs.h  tor_includes.h  vtor.c  vtor.h  vtor_preload.c  vtorflow.c  vtorflow.h
src/configuration/: shd-configuration.c  shd-configuration.h  shd-examples.c  shd-examples.h  shd-parser.c  shd-parser.h
src/core/: CMakeLists.txt  events.c  events.h  evtracker.c  evtracker.h  log.c  log.h  log_codes.h  main.c  process.c  process.h  process_controller.c  routing.c  routing.h  shd-controller-main.c  shd-main.c  sim.h  sim_master.c  sim_slave.c  sim_worker.c  simnet_graph.c  simnet_graph.h  simop.c  simop.h  sysconfig.c  sysconfig.h  timer.c  timer.h
src/dsim/: CMakeLists.txt  dsim_lexer.l  dsim_parser.y  dsim_utils.c  dsim_utils.h
src/engine/: shd-configuration.c  shd-configuration.h  shd-engine.c  shd-engine.h  shd-event-queue.c  shd-event-queue.h  shd-logging.c  shd-logging.h  shd-main.c  shd-main.h  shd-master.c  shd-master.h  shd-plugin.c  shd-plugin.h  shd-slave.c  shd-slave.h  shd-software.c  shd-system.c  shd-system.h  shd-worker.c  shd-worker.h
src/events/: shd-event.c  shd-event.h  shd-killengine-event.c  shd-killengine-event.h  shd-killengine.c  shd-killengine.h  shd-nodeevent.c  shd-nodeevent.h  shd-spin-event.c  shd-spin-event.h  shd-spin.c  shd-spin.h  shd-spin2.c  shd-spin2.h  shd-spinevent.c  shd-spinevent.h  shd-stopevent.c  shd-stopevent.h
src/hoist/: CMakeLists.txt  HoistGlobals.cpp
src/host/: shd-application.c  shd-application.h  shd-cpu.c  shd-host.c  shd-host.h  shd-network-interface.c  shd-network-interface.h  shd-packet.c  shd-packet.h  shd-process.c  shd-process.h  shd-program.c  shd-program.h  shd-protocol.h  shd-thread.c  shd-thread.h  shd-tracker.c
src/intercept/: CMakeLists.txt  crypto_preload.c  event_preload.c  intercept.c  intercept.h  preload.c  preload.h  socket_preload.c  system_preload.c  vcrypto_intercept.c  vcrypto_intercept.h  vevent_intercept.c  vevent_intercept.h  vsocket_intercept.c  vsocket_intercept.h  vsystem_intercept.c  vsystem_intercept.h
src/interpose/: CMakeLists.txt  shd-interposer.c  shd-program.c  shd-program.h
src/interposition/: CMakeLists.txt  intercept.c  preload-malloc.c  preload.c  preload.h
src/lib/: CMakeLists.txt
src/main/: CMakeLists.txt  Cargo.toml  bindings.h  build.rs  cbindgen.toml  cshadow.rs  lib.rs  main.c  shadow.h  shadow.rs
src/node/: shd-application.c  shd-application.h  shd-cpu.c  shd-cpu.h  shd-descriptor.c  shd-descriptor.h  shd-epoll.c  shd-epoll.h  shd-network-interface.c  shd-network-interface.h  shd-network.c  shd-network.h  shd-node.c  shd-node.h  shd-packet.c  shd-packet.h  shd-protocol.h  shd-system.c  shd-system.h  shd-tracker.c  shd-tracker.h
src/plug-ins/: CMakeLists.txt  module_interface.h  shd-plugin-interface.h  shd-plugin.c  shd-plugin.h  snri.c  snri.h
src/plugin/: CMakeLists.txt  shadow-plugin-interface.h  shd-interposer.c  shd-library.c  shd-library.h  shd-plugin-state.c  shd-plugin-state.h  shd-plugin.c  shd-plugin.h  shd-shadowlib.c  shd-shadowlib.h  shd-software.c  shd-software.h  shd-system.c  shd-system.h
src/plugins/: CMakeLists.txt  shd-library.c  shd-library.h
src/preload/: CMakeLists.txt  interposer.c  interposer_helper.c  preload_defs.h  preload_defs_special.h  preload_functions.c  preload_functions.h  preload_includes.h  shd-interposer-helper.c  shd-interposer.c  shd-preload-defs-special.h  shd-preload-defs.h  (+3 more)
src/shim/: gate.h  (+34 more)
test/: CMakeLists.txt  Makefile  dsim_tester.c  loadgraph.c  nbdf_test.c  run_plugin_test.sh  run_vevent_test  shd-spina.c  shd-spina.h  shd-spine.c  shd-spine.h  shd-test-curl.c  shd-test-module.c  shd-test-plugin.c  test_btree.c  test_eventqueue.c  test_evtracker.c  test_hashtable.c  test_linkedbuffer.c  test_linkedbuffer_nocow.c  test_multiso.c  test_multiso_lib.c  test_orderedlist.c  test_pipecloud.c  test_preload.c  test_preload_lib.c  test_rwlock.c  test_rwlock_mgr.c  test_shares.c  test_shmcabinet.c  test_simple_tcp.c  test_simple_udp.c  test_timerfd.c  vevent_test.c  vevent_test.dsim
(+2594 files in other folders)
