[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowtools"
version = "0.0.1"
description = "Libraries and tools for use with the shadow network simulator"
# Oldest python version on a supported platform (ubuntu 20.04).
requires-python = ">=3.8.2"
# Strings from https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    # Tightly coupled with the shadow simulator itself.
    # Best distributed together.
    "Private :: Do Not Upload",
]
license = {file = "LICENSE"}
readme = "README.md"

# We attempt to support using packages from the system package manager, by here
# specifying compatibility with the oldest version available on one of shadow's
# supported platforms.
dependencies = [
    # Version of python3-yaml on ubuntu 20.04.
    "pyyaml ~= 5.3",
]

[project.urls]
Homepage = "https://shadow.github.io/"
Issues = "https://github.com/shadow/shadow/issues"

[project.scripts]
shadow-exec = "shadowtools.shadow_exec:__main__"
